Theming app to match icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,13 +15,13 @@
 -->
 <resources>
     <color name="colorPrimary">#f8f8f8</color>
-    <color name="colorPrimaryDark">#e0e0e0</color>
-    <color name="colorAccent">#167c80</color>
+    <color name="colorPrimaryDark">#dfdfdf</color>
+    <color name="colorAccent">#dfdfdf</color>
 
     <color name="white">#fafafa</color>
     <color name="black">#333333</color>
 
-    <color name="screen">#4e888a</color>
-    <color name="sound">#f19645</color>
-    <color name="icon">#56000000</color>
+    <color name="screen">#00418C</color>
+    <color name="sound">#C81400</color>
+    <color name="icon">#dfdfdf</color>
 </resources>
