--- a/app/src/main/res/layout/activty_constraint.xml
+++ b/app/src/main/res/layout/activty_constraint.xml
@@ -84,50 +84,50 @@
     </RelativeLayout>
 
     <!-- Screen -->
-    <RelativeLayout
-        android:id="@id/main_screen_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/screen"
-        android:elevation="100dp"
-        android:forceDarkAllowed="false"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <RelativeLayout-->
+<!--        android:id="@id/main_screen_layout"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:background="@color/screen"-->
+<!--        android:elevation="100dp"-->
+<!--        android:forceDarkAllowed="false"-->
+<!--        app:layout_constraintHeight_default="percent"-->
+<!--        app:layout_constraintHeight_percent="0.5"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/screen_fab"
-            style="@style/AppTheme.RecordFab"
-            android:src="@drawable/ic_action_screen_record"
-            android:visibility="gone" />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/screen_fab"-->
+<!--            style="@style/AppTheme.RecordFab"-->
+<!--            android:src="@drawable/ic_action_screen_record"-->
+<!--            android:visibility="gone" />-->
 
-        <TextView
-            style="@style/AppTheme.RecordTitle"
-            android:text="@string/main_screen_action" />
+<!--        <TextView-->
+<!--            style="@style/AppTheme.RecordTitle"-->
+<!--            android:text="@string/main_screen_action" />-->
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="36dp"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_margin="16dp"-->
+<!--            android:orientation="horizontal">-->
 
-            <ImageView
-                android:id="@+id/screen_last_icon"
-                style="@style/AppTheme.ImageButton"
-                android:contentDescription="@string/screen_last_title"
-                android:src="@drawable/ic_last_screen" />
+<!--            <ImageView-->
+<!--                android:id="@+id/screen_last_icon"-->
+<!--                style="@style/AppTheme.ImageButton"-->
+<!--                android:contentDescription="@string/screen_last_title"-->
+<!--                android:src="@drawable/ic_last_screen" />-->
 
-            <ImageView
-                android:id="@+id/screen_settings_icon"
-                style="@style/AppTheme.ImageButton"
-                android:layout_marginStart="8dp"
-                android:contentDescription="@string/screen_settings_title"
-                android:src="@drawable/ic_settings" />
-        </LinearLayout>
-    </RelativeLayout>
+<!--            <ImageView-->
+<!--                android:id="@+id/screen_settings_icon"-->
+<!--                style="@style/AppTheme.ImageButton"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:contentDescription="@string/screen_settings_title"-->
+<!--                android:src="@drawable/ic_settings" />-->
+<!--        </LinearLayout>-->
+<!--    </RelativeLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
