--- a/app/src/main/res/layout/activty_constraint.xml
+++ b/app/src/main/res/layout/activty_constraint.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) 2017 The LineageOS Project
+  * Copyright (C) 2017-2020 The LightningFastRom
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,119 +16,147 @@
 -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sound">
+    android:background="@color/sound"
+    android:forceDarkAllowed="false">
 
-    <!-- Is Recording -->
-    <RelativeLayout
-        android:id="@+id/main_recording"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_screen_layout">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/main_recording_text"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/sound">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/main_recording_text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:text="@string/app_name"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/settings"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:visibility="invisible" />
+
+                <ImageView
+                    android:id="@+id/settings"
+                    style="@style/AppTheme.ImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/screen_settings_title"
+                    android:src="@drawable/ic_settings"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- Is Recording -->
+        <RelativeLayout
+            android:id="@+id/main_recording"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            app:layout_constraintBottom_toTopOf="@+id/main_sound_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_recording">
+
+            <TextView
+                android:id="@+id/main_recording_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
+            <org.lightningfastst.recorder.ui.SoundVisualizer
+                android:id="@+id/main_recording_visualizer"
+                android:layout_width="match_parent"
+                android:layout_height="128dp"
+                android:layout_below="@id/main_recording_text"
+                tools:visibility="gone" />
+        </RelativeLayout>
+
+        <!-- Recordings -->
+        <ListView
+            android:id="@+id/recordings"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/main_sound_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_recording"
+            tools:visibility="invisible" />
+
+        <!-- Sound -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_sound_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="28sp" />
+            android:gravity="bottom|fill_horizontal|center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recording">
 
-        <org.lightningfastst.recorder.ui.SoundVisualizer
-            android:id="@+id/main_recording_visualizer"
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:layout_below="@id/main_recording_text"
-            android:visibility="gone" />
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/sound_last_icon"
+                style="@style/AppTheme.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:contentDescription="@string/sound_last_title"
+                android:src="@drawable/ic_last_sound"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Sound -->
-    <RelativeLayout
-        android:id="@+id/main_sound_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/sound"
-        android:forceDarkAllowed="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/sound_fab"
+                style="@style/AppTheme.RecordFab"
+                android:layout_marginEnd="299dp"
+                android:src="@drawable/ic_action_sound_record"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/sound_last_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/sound_fab"
-            style="@style/AppTheme.RecordFab"
-            android:src="@drawable/ic_action_sound_record" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            style="@style/AppTheme.RecordTitle"
-            android:text="@string/main_sound_action" />
-
-        <ImageView
-            android:id="@+id/sound_last_icon"
-            style="@style/AppTheme.ImageButton"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:contentDescription="@string/sound_last_title"
-            android:src="@drawable/ic_last_sound" />
-    </RelativeLayout>
-
-    <!-- Screen -->
-<!--    <RelativeLayout-->
-<!--        android:id="@id/main_screen_layout"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:background="@color/screen"-->
-<!--        android:elevation="100dp"-->
-<!--        android:forceDarkAllowed="false"-->
-<!--        app:layout_constraintHeight_default="percent"-->
-<!--        app:layout_constraintHeight_percent="0.5"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/screen_fab"-->
-<!--            style="@style/AppTheme.RecordFab"-->
-<!--            android:src="@drawable/ic_action_screen_record"-->
-<!--            android:visibility="gone" />-->
-
-<!--        <TextView-->
-<!--            style="@style/AppTheme.RecordTitle"-->
-<!--            android:text="@string/main_screen_action" />-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="36dp"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/screen_last_icon"-->
-<!--                style="@style/AppTheme.ImageButton"-->
-<!--                android:contentDescription="@string/screen_last_title"-->
-<!--                android:src="@drawable/ic_last_screen" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/screen_settings_icon"-->
-<!--                style="@style/AppTheme.ImageButton"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:contentDescription="@string/screen_settings_title"-->
-<!--                android:src="@drawable/ic_settings" />-->
-<!--        </LinearLayout>-->
-<!--    </RelativeLayout>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
