--- a/app/src/main/res/layout/activty_constraint.xml
+++ b/app/src/main/res/layout/activty_constraint.xml
@@ -24,7 +24,7 @@
     android:forceDarkAllowed="false">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/recorder_appbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,8 +75,13 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_sound"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recorder_appbar">
 
         <!-- Is Recording -->
         <RelativeLayout
@@ -88,7 +93,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_recording">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/main_recording_text"
@@ -97,6 +102,7 @@
                 android:maxLines="2"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
+                android:text="@string/sound_recording_title_working"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -117,8 +123,8 @@
             app:layout_constraintBottom_toTopOf="@+id/main_sound_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_recording"
-            tools:visibility="invisible" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="invisible"/>
 
         <!-- Sound -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -128,8 +134,7 @@
             android:gravity="bottom|fill_horizontal|center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recording">
+            app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
                 android:id="@+id/sound_last_icon"
