--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@color/sound</item>
-        <item name="android:navigationBarColor">@color/sound</item>
         <item name="android:windowLightNavigationBar">true</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowContentTransitions">true</item>
@@ -30,6 +28,8 @@
 
     <style name="AppTheme.NoActionBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@color/sound</item>
+        <item name="android:navigationBarColor">@color/sound</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:fitsSystemWindows">true</item>
@@ -55,6 +55,15 @@
 		<item name="android:backgroundDimEnabled">false</item>
 		<item name="android:textColor">@color/icon</item>
 		<item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppTheme.ListActivity" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">?android:attr/colorPrimary</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowLightNavigationBar">@bool/is_day</item>
+        <item name="android:windowLightStatusBar">@bool/is_day</item>
     </style>
 
     <style name="AppTheme.RecordTitle">
