Recorder: Joining the dark side.

--- a/app/src/main/res/layout/dialog_content_last_item.xml
+++ b/app/src/main/res/layout/dialog_content_last_item.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
-        android:textColor="@color/black"
+        android:textColor="@color/icon"
         android:textSize="14sp" />
 
     <LinearLayout style="@style/AppTheme.ActionsLayout">
