--- a/app/src/main/res/layout/dialog_content_screen_settings.xml
+++ b/app/src/main/res/layout/dialog_content_screen_settings.xml
@@ -22,5 +22,6 @@
         android:id="@+id/dialog_content_screen_settings_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+		android:textColor="@color/icon"
         android:text="@string/screen_audio_message_off" />
 </LinearLayout>
