--- a/app/src/main/res/layout/dialog_content_settings.xml
+++ b/app/src/main/res/layout/dialog_content_settings.xml
@@ -20,13 +20,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.SwitchCompat
+    <Switch
         android:id="@+id/dialog_content_settings_location_switch"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/settings_location_message" />
 
-    <androidx.appcompat.widget.SwitchCompat
+    <Switch
         android:id="@+id/dialog_content_settings_high_quality_switch"
         android:layout_width="match_parent"
         android:layout_height="56dp"
