--- a/app/src/main/res/layout/dialog_content_settings.xml
+++ b/app/src/main/res/layout/dialog_content_settings.xml
@@ -15,19 +15,21 @@
      limitations under the License.
 -->
 <LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <Switch
         android:id="@+id/dialog_content_settings_location_switch"
+		style="@style/AppTheme.Switch"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/settings_location_message" />
 
     <Switch
         android:id="@+id/dialog_content_settings_high_quality_switch"
+		style="@style/AppTheme.Switch"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/settings_quality_high" />
