--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (c) 2017-2021 The LineageOS Project
+     Copyright (c) 2017-2021 The lightning Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -22,19 +23,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sound">
-
-    <TextView
-        android:id="@+id/main_title"
-        style="@style/AppTheme.RecordTitle"
+    
+	<Toolbar
+        android:id="@+id/recording_toolbar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/main_recording_visualizer"
+        android:layout_height="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" 
+        android:outlineProvider="none" />
 
     <FrameLayout
         android:id="@+id/main_bottom_container"
@@ -65,7 +62,7 @@
         app:maxAudioValue="@integer/max_audio_value"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/recording_toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible" />
 
