--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,41 +20,49 @@
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+		<item name="android:textColorPrimary">@color/white</item>
+		<item name="android:textColorSecondary">@color/white</item>
         <item name="android:windowLightNavigationBar">false</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowContentTransitions">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/AppTheme.RecordToolbar</item>
         <item name="android:toolbarStyle">@style/AppTheme.RecordToolbar</item>
+		<item name="alertDialogTheme">@style/DialogActivity</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.RecorderActivity">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@color/sound</item>
-        <item name="android:navigationBarColor">@color/sound</item>
-        <item name="android:background">@color/sound</item>
-        <item name="android:textColorPrimary">@color/icon</item>
+        <item name="android:statusBarColor">@color/colorAccent</item>
+        <item name="android:navigationBarColor">@color/colorAccent</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/white</item>
+		<item name="android:textColorSecondary">@color/white</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/AppTheme.RecordToolbar</item>
     </style>
 
-    <style name="AppTheme.NoActionBar"  parent="@style/AppTheme.RecorderActivity">
+    <style name="AppTheme.NoActionBar" parent="@style/AppTheme.RecorderActivity">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.DialogActivity">
+    <style name="DialogActivity" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+		<item name="colorAccent">@color/systemColorAccent</item>
+		<item name="android:textColorPrimary">@android:color/white</item>
+		<item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
+		<item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="AppTheme.ListActivity" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -68,9 +76,9 @@
     </style>
 
     <style name="AppTheme.RecordToolbar" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:background">@color/sound</item>
+        <item name="android:background">@color/colorAccent</item>
         <item name="android:displayOptions"></item>
-        <item name="background">@color/sound</item>
+        <item name="background">@color/colorAccent</item>
         <item name="android:titleTextColor">@color/white</item>
         <item name="android:outlineProvider">none</item>
         <item name="android:titleTextAppearance">@style/AppTheme.RecordToolbarTitleText</item>
